typescript/checker/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts.stderr
error: TS2365 {
    span: Span {
        lo: BytePos(
            243,
        ),
        hi: BytePos(
            251,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:11:10
   |
11 | var r1 = null + a;
   |          ^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            262,
        ),
        hi: BytePos(
            270,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:12:10
   |
12 | var r2 = null + b;
   |          ^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            281,
        ),
        hi: BytePos(
            289,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:13:10
   |
13 | var r3 = null + c;
   |          ^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            300,
        ),
        hi: BytePos(
            308,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:14:10
   |
14 | var r4 = a + null;
   |          ^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            319,
        ),
        hi: BytePos(
            327,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:15:10
   |
15 | var r5 = b + null;
   |          ^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            338,
        ),
        hi: BytePos(
            346,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:16:10
   |
16 | var r6 = null + c;
   |          ^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            373,
        ),
        hi: BytePos(
            381,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:19:10
   |
19 | var r7 = null + d;
   |          ^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            392,
        ),
        hi: BytePos(
            403,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:20:10
   |
20 | var r8 = null + true;
   |          ^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            414,
        ),
        hi: BytePos(
            430,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:21:10
   |
21 | var r9 = null + { a: '' };
   |          ^^^^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            442,
        ),
        hi: BytePos(
            454,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:22:11
   |
22 | var r10 = null + foo();
   |           ^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            466,
        ),
        hi: BytePos(
            484,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts:23:11
   |
23 | var r11 = null + (() => { });
   |           ^^^^^^^^^^^^^^^^^^

